cabal-version:      3.4
name:               hgeometry
version:            1.0.0.0
synopsis:            Geometric Algorithms, Data structures, and Data types.
description:
  HGeometry provides some basic geometry types, and geometric algorithms and
  data structures for them. The main two focusses are: (1) Strong type safety,
  and (2) implementations of geometric algorithms and data structures with good
  asymptotic running time guarantees. Note that HGeometry is still highly experimental, don't be surprised to find bugs.

homepage:           https://fstaals.net/software/hgeometry
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-doc-files:
    README.md
    changelog.txt
-- extra-source-files:
data-dir: data
data-files:
    -- polygons.simple.json
    -- polygons.multi
    -- ipe/basic.isy
    -- ipe/opacities.isy
    -- ipe/test/*.ipe
    test-with-ipe/**/*.ipe

tested-with:
    GHC == 9.12.2
  -- , GHC == 9.10.1
  -- , GHC == 9.8.2

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

--------------------------------------------------------------------------------

common all-setup
    ghc-options: -O2 -fspecialise-aggressively -fexpose-all-unfoldings
                 -Wall
                 -fno-warn-unticked-promoted-constructors
                 -fno-warn-type-defaults
                 -fno-warn-partial-type-signatures
                 -Werror=missing-methods

    build-depends:
        base                      >= 4.16.1        && < 5
      , hgeometry-combinatorial   >= 1             && < 1.1
      , hgeometry-vector          >= 1             && < 1.1
      , hgeometry-point           >= 1             && < 1.1
      , hgeometry-kernel          >= 1             && < 1.1
      , hgeometry-lineSegmentIntersection           >= 1             && < 1.1
      , hgeometry-polyLine        >= 1             && < 1.1
      , hgeometry-spline          >= 1             && < 1.1
      , hgeometry-polygon         >= 1             && < 1.1
      -- , hgeometry-ipe             >= 1             && < 1.1
      , hiraffe                   >= 0.1           && < 1
      , containers                >= 0.6           && < 1
      , nonempty-containers       >= 0.3.4.5       && < 0.4
      , monoidal-containers       >= 0.6.6         && < 0.7
      , fingertree                >= 0.1.5         && < 0.2
      , dlist                     >= 0.7           && < 1.1
      , bytestring                >= 0.11          && < 1
      , vector:vector             >= 0.13          && < 1
      , array                     >= 0.5           && < 1
      , lens                      >= 5.2           && < 6
      , deepseq                   >= 1.1           && < 2
      , semigroupoids             >= 6.0.0.2       && < 7
      , foldable1-classes-compat  >= 0.1           && < 1
      , semigroups                >= 0.18          && < 1
      , random                    >= 1.3           && < 2
      , witherable                >= 0.4           && < 1
      , linear                    >= 1.21          && < 2
      , data-clist                >= 0.2           && < 1
      , aeson                     >= 2.1           && < 3
      , nonempty-vector           >= 0.2           && < 1
      , mtl                       >= 2.2           && < 3
      , data-default              >= 0.8           && < 1
      , MonadRandom               >= 0.5           && < 1
      , reflection                >= 2.1.7         && < 3
      , filepath                  >= 1.4.100       && < 2
      , file-io                   >= 0.1           && < 1
      , indexed-traversable       >= 0.1.3         && < 1
      , vector-builder            >= 0.3.8         && < 1
      -- , HsYAML                    >= 0.2           && < 1
      , semialign                 >= 1.3           && < 1.4
      , these                     >= 1.0.1         && < 1.3
      , subcategories             >= 0.2           && < 0.3

      -- , ghc-typelits-natnormalise >= 0.9           && < 0.10
      -- , ghc-typelits-knownnat     >= 0.8.2         && < 0.9

      -- , entropy                   >= 0.4.1.10      && < 0.5
      -- , pretty-simple             >= 4.1.2.0       && < 5


    default-language: GHC2024

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies
      , PartialTypeSignatures

common hgeometry-setup
    build-depends:
        hgeometry-kernel
      , hgeometry-polyLine
      , hgeometry-lineSegmentIntersection
      , hgeometry-polygon

common doctest
    build-depends:
      , doctest                    >= 0.8      && < 1

common all-quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                           >= 2.9     && < 3
      , QuickCheck                      >= 2.10    && < 3
      , quickcheck-instances            >= 0.3     && < 1
      , approximate-equality            >= 1.1.0.2 && < 1.2

common quickcheck-setup
    build-depends:
        hgeometry-kernel:quickcheck
      , hgeometry-vector:quickcheck
      , hgeometry-point:quickcheck
      , hgeometry-polyLine:quickcheck
      , hgeometry-polygon:quickcheck
      , hgeometry

common ipe-setup
    build-depends:
        hgeometry-kernel        >= 1.0.0         && < 1.1
      , hgeometry-polyLine      >= 1.0.0         && < 1.1
      , hgeometry-polygon       >= 1.0.0         && < 1.1
      , hgeometry-spline        >= 1.0.0         && < 1.1

      , hexpat                  >= 0.20.9        && < 1
      , parsec                  >= 3             && < 4
      , text                    >= 2.1.2         && < 3
      , typed-process           >= 0.2.6         && < 1
      , colour                  >= 2.3.6         && < 3
      , vinyl                   >= 0.14          && < 1
      , singletons              >= 3             && < 4
      , singletons-th           >= 3             && < 4
      , template-haskell        >= 2.10          && < 3
      , directory               >= 1.3.8         && < 2
      , approximate-equality    >= 1.1.0.2       && < 1.2

common ipe-test-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                   >= 2.9
      -- , QuickCheck              >= 2.10
      -- , quickcheck-instances
      , hgeometry-ipe

--------------------------------------------------------------------------------
-- * Libraries
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- * HGeometry Library (main library)

library
    import:           all-setup,hgeometry-setup
    hs-source-dirs:   src
    exposed-modules:
        HGeometry

        HGeometry.Cone.Intersection

        HGeometry.DelaunayTriangulation
        HGeometry.DelaunayTriangulation.DivideAndConquer
        HGeometry.DelaunayTriangulation.Naive

        HGeometry.Disk.Smallest
        HGeometry.Disk.Smallest.Naive

        HGeometry.Graphics.Camera

        HGeometry.LPType
        HGeometry.LPType.LinearProgramming

        HGeometry.PlaneGraph
        HGeometry.PlaneGraph.Class
        HGeometry.PlaneGraph.Connected
        HGeometry.PlaneGraph.Connected.PolygonOverlay

        HGeometry.Polygon.Simple.Sample
        HGeometry.Polygon.Simple.ShortestPath.Tree
        HGeometry.Polygon.Simple.DualTree

--
        HGeometry.Polygon.Convex.Tangents
        HGeometry.Polygon.Convex.Merge
        HGeometry.Polygon.Convex.Random
        HGeometry.Polygon.Convex.MinkowskiSum

        HGeometry.Polygon.Monotone

        HGeometry.Polygon.Visibility
        HGeometry.Polygon.Visibility.Naive

        HGeometry.PolyLine.Simplification.DouglasPeucker
        HGeometry.PolyLine.Simplification.ImaiIri

        HGeometry.PolyLine.Frechet.Discrete


--
        HGeometry.ConvexHull
        HGeometry.ConvexHull.GrahamScan
        HGeometry.ConvexHull.DivideAndConquer
        HGeometry.ConvexHull.QuickHull
        HGeometry.ConvexHull.JarvisMarch

        HGeometry.ConvexHull.Melkman

        -- HGeometry.ConvexHull.R3.Naive
        HGeometry.ConvexHull.R3.Naive.Dual

        HGeometry.ClosestPair
        HGeometry.ClosestPair.Naive
        HGeometry.ClosestPair.DivideAndConquer

        HGeometry.IntervalTree

        HGeometry.HalfPlane.CommonIntersection
        HGeometry.HalfPlane.CommonIntersection.Chain

        HGeometry.Polygon.Triangulation
        HGeometry.Polygon.Triangulation.TriangulateMonotone
        HGeometry.Polygon.Triangulation.MakeMonotone

        HGeometry.Line.LowerEnvelope
        HGeometry.Line.BatchPointLocation

        HGeometry.Plane.BatchPointLocation


        HGeometry.Plane.LowerEnvelope
        HGeometry.Plane.LowerEnvelope.Naive
        HGeometry.Plane.LowerEnvelope.Clipped

        HGeometry.Plane.LowerEnvelope.Connected
        HGeometry.Plane.LowerEnvelope.Connected.Graph


        HGeometry.Plane.LowerEnvelope.Connected.BruteForce
        HGeometry.Plane.LowerEnvelope.Connected.Randomized

        HGeometry.VoronoiDiagram
        HGeometry.VoronoiDiagram.Clipped
        HGeometry.VoronoiDiagram.ViaLowerEnvelope

        HGeometry.SegmentTree
        HGeometry.SegmentTree.Base
        -- HGeometry.SegmentTree.R2
        HGeometry.SegmentTree.CanonicalSubSet

        HGeometry.RangeTree
        HGeometry.RangeTree.Base

        HGeometry.VerticalRayShooting
        HGeometry.VerticalRayShooting.PersistentSweep

    reexported-modules:
        HGeometry.LineSegment.Intersection.Naive
      , HGeometry.LineSegment.Intersection.BentleyOttmann

    other-modules:

        HGeometry.DelaunayTriangulation.Types

        HGeometry.Polygon.Visibility.NaiveVisibilityPolygon

        HGeometry.Polygon.Triangulation.Types

        HGeometry.PlaneGraph.Type
        HGeometry.PlaneGraph.Connected.Type
        HGeometry.PlaneGraph.Connected.FromIntersectingSegments
        HGeometry.PlaneGraph.Connected.PolygonOverlay.Types

        HGeometry.PointLocation.Type

        HGeometry.Plane.LowerEnvelope.Type
        -- HGeometry.Plane.LowerEnvelope.Sample
        HGeometry.Plane.LowerEnvelope.Clipped.Type

        HGeometry.Plane.LowerEnvelope.Connected.Type
        HGeometry.Plane.LowerEnvelope.Connected.Primitives
        HGeometry.Plane.LowerEnvelope.Connected.VertexForm
        HGeometry.Plane.LowerEnvelope.Connected.Region
        HGeometry.Plane.LowerEnvelope.Connected.Regions
        HGeometry.Plane.LowerEnvelope.Connected.MonoidalMap
        -- HGeometry.Plane.LowerEnvelope.Connected.Separator

        -- HGeometry.Plane.LowerEnvelope.DivideAndConquer
        -- HGeometry.Plane.LowerEnvelope.EpsApproximation



    -- other-extensions:

--------------------------------------------------------------------------------
-- * HGeometry-quickcheck

library quickcheck
    import: all-setup, hgeometry-setup, all-quickcheck-setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Instances
      HGeometry.Polygon.Monotone.Instances
      HGeometry.Polygon.Convex.Instances
      HGeometry.PlaneGraph.Instances
    other-modules:
      Paths_hgeometry
    autogen-modules:
      Paths_hgeometry
    build-depends:
         hgeometry
       -- , cereal   >= 0.5    && < 1

library ply-writer
    import: all-setup
    visibility: public
    hs-source-dirs: ply/src
    exposed-modules:
      PLY.Writer
    build-depends:
         hgeometry-point
       , hgeometry-kernel
       , colour                  >= 2.3.6         && < 3


--------------------------------------------------------------------------------
-- * Test Suites
--------------------------------------------------------------------------------
--------------------------------------------------------------------------------
-- ** HGeometry

common test-fractional
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      hgeometry:quickcheck
    , hgeometry-polygon:quickcheck
    , hgeometry-vector:numtypes
  hs-source-dirs: test/fractional
  other-modules:
      Spec
      ConvexHull.ConvexHullSpec
      ConvexHull.MelkmanSpec
      ConvexHull.R3Spec
      ClosestPair.ClosestPairSpec
      LowerEnvelope.RegionsSpec
      Polygon.Convex.ConvexSpec
      Polygon.Convex.UnboundedSpec
      Polygon.TriangulateSpec
      Polygon.Triangulation.MakeMonotoneSpec
      PolyLine.Simplification.ImaiIriSpec
      PolyLine.Frechet.DiscreteSpec
      VerticalRayShootingSpec
      LineSegment.BentheyOttmanNeighbourSpec
      Graphics.CameraSpec
      Plane.LowerEnvSpec

test-suite hspec-rational
  import:           all-setup, hgeometry-setup, all-quickcheck-setup,
                    quickcheck-setup, test-fractional
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  mixins:
      hgeometry-vector:numtypes (Rational as R)

test-suite hspec-intervalreal
  import:           all-setup, hgeometry-setup, all-quickcheck-setup,
                    quickcheck-setup, test-fractional
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  mixins:
      hgeometry-vector:numtypes (IntervalReal as R)

-- test-suite hspec-double
--   import:           all-setup, hgeometry-setup, all-quickcheck-setup,
--                     quickcheck-setup, test-fractional
--   type:             exitcode-stdio-1.0
--   main-is:          Main.hs
--   mixins:
--       hgeometry-vector:numtypes (Double as R)

test-suite hspec-integral
  import:           all-setup, hgeometry-setup, all-quickcheck-setup, quickcheck-setup
  build-tool-depends: hspec-discover:hspec-discover
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs: test/integral
  build-depends:
      hgeometry:quickcheck
    , hgeometry-vector:numtypes
  mixins:
      hgeometry-vector:numtypes (Int as R)
  other-modules:
      Spec
      SegmentTreeSpec
      SegmentTree.R2Spec
      RangeTreeSpec
      IntervalTreeSpec


test-suite doctest
    import:           all-setup, all-quickcheck-setup, quickcheck-setup, doctest
    type:             exitcode-stdio-1.0
    main-is:          doctests.hs
    build-tool-depends:  doctest-driver-gen:doctest-driver-gen

common with-ipe-hspec-fractional
  build-tool-depends: hspec-discover:hspec-discover
  other-modules:
      Spec
      Paths_hgeometry
      Golden
      Disk.MinDiskSpec
      Test.Util
      DelaunayTriangulation.DTSpec
      Polygon.Simple.InPolygonSpec
      Polygon.Convex.ConvexSpec
      Polygon.Convex.UnboundedSpec
      Polygon.Convex.IntersectTriangleSpec
      Polygon.VisibilitySpec
      VoronoiDiagram.VoronoiSpec

      Plane.LowerEnvelopeSpec
      Plane.NaiveLowerEnvSpec
      Plane.RenderEnvelopeSpec
      Plane.RenderProps
          -- TODO: move these ones

      HalfPlane.Intersect

      Plane.BatchPointLocationSpec

      LineSegmentSpec
      LineSegment.Intersection.WithHalfSpaceSpec
      LPTypeSpec
      HalfLineSpec
      Polygon.Simple.SPTSpec
      Polygon.Simple.IntersectHalfplaneSpec
      Polygon.Triangulation.TriangulateMonotoneSpec
      Polygon.Triangulation.TriangulateSpec
      Polygon.Triangulation.WorldSpec
      LineSegment.Intersection.BentleyOttmannSpec
      PlaneGraph.RenderSpec
      PlaneGraph.FromPolygonsSpec
      PlaneGraph.RenderOverlaySpec
      PlaneGraph.PolygonOverlaySpec



      HalfPlane.CommonIntersectionSpec
      Line.LowerEnvelopeSpec
      Paths_hgeometry
      BallSpec
      TriangleUnboundedConvexSpec

      Wavefront

  autogen-modules:
      Paths_hgeometry
  build-depends:
        hspec-with-tempfile    >= 0.1
      , hgeometry-ipe
      , hgeometry:quickcheck
      , hgeometry-vector:numtypes
      , wavefront              >= 0.7.1.5 && < 0.8
      , exceptions             >= 0.10.9  && < 0.11


test-suite with-ipe-hspec-rational
  import:           all-setup, ipe-setup, all-quickcheck-setup,
                    quickcheck-setup, with-ipe-hspec-fractional
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test-with-ipe/test
  mixins:
      hgeometry-vector:numtypes (Rational as R)

-- test-suite with-ipe-hspec-intervalreal
--   import:           all-setup, ipe-setup, all-quickcheck-setup,
--                     quickcheck-setup, with-ipe-hspec-fractional
--   type:             exitcode-stdio-1.0
--   main-is:          Main.hs
--   hs-source-dirs:   test-with-ipe/test
--   mixins:
--       hgeometry-vector:numtypes (IntervalReal as R)

--------------------------------------------------------------------------------
-- * Benchmarks
--------------------------------------------------------------------------------

--------------------------------------------------------------------------------
-- ** HGeometry Benchmarks

common bench-setup
  build-depends:
      tasty-bench           >= 0.3  && < 1
    , hgeometry
    , deepseq-generics      >= 0.2  && < 1
    , hashable              >= 1.4  && < 2
    , hgeometry-vector:numtypes

benchmark benchmarks
  import: all-setup, hgeometry-setup, bench-setup
  hs-source-dirs: bench
  main-is:        Benchmarks.hs
  type: exitcode-stdio-1.0
  other-modules:
    ConvexHull.Bench
    ConvexHull.GrahamBench
    ConvexHull.GrahamV2
    ConvexHull.GrahamInt
    ConvexHull.GrahamFastest
    -- ConvexHull.GrahamClassy
    Util

benchmark lowerEnv
  import:         all-setup, hgeometry-setup, bench-setup
  hs-source-dirs: bench
  main-is:        LowerEnvBench.hs
  type:           exitcode-stdio-1.0
  -- ghc-options:
  --   -prof
  --   -fprof-late-inline
  --   -fprof-auto
  --   -rtsopts "-with-rtsopts=-p"
  other-modules:

benchmark batchPointLocation
  import:         all-setup, hgeometry-setup, bench-setup
  hs-source-dirs: bench
  main-is:        BatchPointLocationBench.hs
  type:           exitcode-stdio-1.0
  mixins:
      hgeometry-vector:numtypes (IntervalReal as R)
  build-depends:
         hgeometry-ipe
       , time                    >= 1.14 && < 1.16
